// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _s-compose _f-337534512 _br-295786862 _b-1357850575 _tsx-200463037 _tsy-1997414396 _bs-2116526048 test1"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1841970073 _o-309692565 who"
    />
    <div
      class="is_View _f-1841970073 _b-853952771 _p-379855349 _i-288189624 ease-in-out-top"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1841970073 _o-309692565 who"
    />
    <div
      class="is_View _f-1841970073 _b-853899149 _p-379855349 _i-290807256 ease-in-out-top"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-309692565 _b-855835834"
    >
      <div
        class="is_View _f-2057920087 _o-309692565 _b-855835834 hello-world"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-309692565 _b-855835834"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-309692565 _b-1357850575"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _p-149746677 _w-224889932 _mw-670549216 _mw-269516701"
    >
      <div
        class="is_View _f-2057920087 _w-1618194424 _h-595564023"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _i-298708656 _p-1414317666"
    >
      <div
        class="is_View _f-2057920087 _b-1357850575"
      >
        <div
          class="is_View _f-2057920087 _i-298708656 _p-1414317666 _b-984970795"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _p-1109472687 home-top-dish"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Text _c-1996280471 _fs-525193472"
    >
      <span
        class="is_Text _c-1996280471 _us-544335041"
      >
        <span
          class="is_Text _c-1732419749 _fs-525198277 _fw-291014182"
        >
          hello
        </span>
      </span>
    </span>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-1507268773 _t-210974153"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _b-2135346130"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_View _pe-1547870085 _w-640548506 _h-2047729177 _mw-1042395974 _mh-1620098797"
    />
    <span
      class="is_View _pe-1547870085 _f-627022823 _w-1832660006 _h-1789379449 _mw-1405029626 _mh-2133947955"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-337534512 _b-1357850575"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1793753171 _g-1921595370"
      data-testid="flex-wrap"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _ai-687583239 _jc-998045873 _f-1793753171"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _ai-687583239 _jc-998045873 _f-385101646"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1467004017 _ai-1907611617 _jc-410244928 _ac-1604768171"
      data-testid="flex-properties"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2080475659 _br-1561155430 _mw-234976065 _o-309692565 _p-337784614 _w-1374539773 _b-914240721 _c-849248646"
    >
      <div
        class="is_View _f-217718925 _g-1914921925 _jc-410244928"
      >
        <span
          class="is_Text _c-1996280471"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2081974118 _br-1561155430 _mw-234976065 _o-309692565 _p-337784614 _w-1374539773 _b-914240721 _c-849248646"
    >
      <div
        class="is_View _f-217718925 _g-1914921925 _jc-1909189881"
      >
        <span
          class="is_Text _c-1996280471"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _g-1921595370 _p-49051639 _f-1031576800"
      data-testid="flex-wrap-media"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View t_group_animated _f-2057920087"
      data-testid="animated-group"
    >
      <div
        class="is_View _f-2057920087 _w-1375642040 _b-552705237"
        data-testid="animated-group-child"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
